# ltx-desktop-macos

./: .gitignore  .intendant.toml  .pre-commit-config.yaml  .suzerain.toml  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  release-please-config.json
.claude/: settings.json
.claude/agents/: api-contract-validator.md  memory-reviewer.md
.claude/skills/marathon-test/: SKILL.md
.claude/skills/new-pipeline/: SKILL.md
.github/workflows/: build-mac-dmg.yml  relock-on-release.yml
app/: CLAUDE.md
app/LTXDesktop/: ContentView.swift  LTXDesktopApp.swift
app/LTXDesktop.xcodeproj/: project.pbxproj
app/LTXDesktop/Models/: AudioRequests.swift  ControlLibraryItem.swift  EnhanceResponse.swift  ExportRequests.swift  GenerationJob.swift  GenerationPreset.swift  GenerationRequests.swift  LoRAInfo.swift  MemoryStats.swift  ModelInfo.swift  TrainingModels.swift  VideoItem.swift
app/LTXDesktop/Services/: BackendService.swift  ControlLibraryStore.swift  ControlVideoProcessor.swift  CoreMLModelManager.swift  DepthExtractor.swift  PoseRenderer.swift  ProcessManager.swift
app/LTXDesktop/ViewModels/: AudioViewModel.swift  ControlLibraryViewModel.swift  GenerationViewModel.swift  HistoryViewModel.swift  LoRAViewModel.swift  MemoryViewModel.swift  ModelsViewModel.swift  QueueViewModel.swift  TrainingViewModel.swift
app/LTXDesktop/Views/: AudioPanelView.swift  ControlLibraryView.swift  ExportSheet.swift  ExtendSheet.swift  GenerationView.swift  HistoryView.swift  LoRAView.swift  QueueView.swift  RetakeSheet.swift  SettingsView.swift
app/LTXDesktop/Views/Training/: DatasetBuilderView.swift  TrainingConfigView.swift  TrainingRunView.swift
app/scripts/: add_swift_file.rb
backend/: CLAUDE.md  __init__.py  dataset_store.py  history_store.py  job_queue.py  main.py  preset_manager.py  pyproject.toml  training_lock.py  training_store.py
backend/audio/: __init__.py  audio_mixer.py  tts_engine.py
backend/engine/: __init__.py  encode_text_subprocess.py  ffmpeg_utils.py  generate_av_quantized.py  generate_v23.py  lora_manager.py  memory_manager.py  mlx_runner.py  model_download_manager.py  model_manager.py  prompt_enhancer.py  quantized_patch.py  streaming_vae.py  teacache.py
backend/engine/ltx23_model/: __init__.py  attention.py  audio_decoder.py  connector.py  feed_forward.py  loader.py  model.py  patchifier.py  pipeline.py  rope.py  text_encoder.py  timestep_embedding.py  transformer.py  vae_decoder.py  vae_encoder.py  vocoder.py
backend/engine/pipelines/: __init__.py  audio_to_video.py  extend.py  ic_lora_video.py  image_to_video.py  preview.py  retake.py  text_to_video.py
backend/engine/training/: config_builder.py  preprocess_runner.py  protocol.py  train_runner.py
docs/adr/: 0000-adopt-intendant.md
scripts/: CLAUDE.md  build-release.sh  bundle-app.sh  codesign-macos.sh  convert_ltx23.py  create-dmg.sh  dev.sh  download_models.sh  marathon_test.py  prepare-python.sh  quantize_model.py  setup.sh  split_model.py  validate_ltx23.py
tests/: CLAUDE.md  MANUAL-training-smoke.md  conftest.py  test_api.py  test_config_builder.py  test_dataset_store.py  test_ltx_trainer_available.py  test_marathon.py  test_probe_frame_count.py  test_trainer_signature.py  test_training_api.py  test_training_lock.py  test_training_protocol.py  test_training_runners_cli.py  test_training_store.py
